<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/ic_monster"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_meds"
        android:icon="@mipmap/ic_meds"
        android:title="@string/title_meds" />
    <item
        android:id="@+id/navigation_shots"
        android:icon="@mipmap/ic_shots"
        android:title="@string/title_shots" />
    <item
        android:id="@+id/navigation_food"
        android:icon="@mipmap/ic_food"
        android:title="@string/title_food" />
    <item
        android:id="@+id/navigation_journal"
        android:icon="@mipmap/ic_heart"
        android:title="@string/title_journal" />

</menu>
