<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/reg_padding"
    android:paddingRight="@dimen/reg_padding"
    tools:context="com.kkontagion.sugarbaby.fragments.JournalFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/reg_padding"
        android:text="@string/journal_h1"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_margin="@dimen/reg_padding"
        android:layout_weight="1"
        android:elevation="10dp"
        android:padding="@dimen/reg_padding"
        app:cardBackgroundColor="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="@dimen/card_icon"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/lrg_padding"
                android:layout_weight="1"
                android:foregroundTint="@color/backgroundDark"
                android:tint="@color/colorAccentDark"
                app:srcCompat="@mipmap/ic_doc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="@dimen/reg_padding"
                android:paddingRight="@dimen/reg_padding"
                android:paddingTop="@dimen/reg_padding">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="12 Nov 2017 2:35pm"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingTop="3dp"
                    android:text="@string/journal_appt_h2"
                    android:textColor="@color/subtext"
                    android:textSize="14sp"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/reg_padding"
        android:text="@string/journal_h2"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:hint="10"
        android:inputType="number|numberDecimal"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/background"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_rate"
        android:layout_alignBottom="@+id/et_rate"
        android:layout_toEndOf="@+id/et_rate"
        android:text="/10"
        android:textSize="20sp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/gv_Feels"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/et_rate" />

</RelativeLayout>
